--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -187,6 +187,13 @@ li {
                 align-items: center;
                 background-size: contain;
                 margin: 0.2rem 0 0 0.3rem;
+
+                @include pc {
+                    width: 1.8rem;
+                    height: 1.8rem;
+                    background-size: 66%;
+                    margin: 0.2rem 0 0 0.8rem;
+                }
             }
         }
         &__form-02 {
@@ -213,6 +220,13 @@ li {
               align-items: center;
               background-size: contain;
               margin: 0.2rem 0 0 0.3rem;
+
+              @include pc {
+                  width: 1.8rem;
+                  height: 1.8rem;
+                  background-size: 66%;
+                  margin: 0.2rem 0 0 0.8rem;
+              }
           }
         }
     }
@@ -258,6 +272,8 @@ li {
                 margin: 0 auto;
                 background-size: auto;
                 background-position: left bottom;
+                display: flex;
+                gap: 2.8rem;
             }
             @media (max-width:1500px) {
 
@@ -271,8 +287,6 @@ li {
             }
     }
     &__left {
-        display: flex;
-        flex-direction: column;
         width: 52%;
 
         @include pc {
@@ -312,8 +326,7 @@ li {
         }
     }
     &__right {
-        display: flex;
-        flex-direction: column;
+
     }
     &__right--upper {
         display: flex;
@@ -322,10 +335,19 @@ li {
         box-shadow: 0.3rem 0.3rem 0 rgba(0, 0, 0, 0.25);
         background-color: rgba(255,255,255,0.3);
         position: relative;
+
+        @include pc {
+            width: 41.3rem;
+            height: 22.2rem;
+        }
     }
     &__right--item {
         display: flex;
         flex-direction: column;
+
+        @include pc {
+            padding: 2rem 0 0 3rem;
+        }
     }
     &__catch-up {
         font-size: 1.3rem;
@@ -334,10 +356,19 @@ li {
         margin: 2.2rem 1rem 0.6rem 1rem;
         padding: 0.5rem 0.8rem;
         font-weight: 700;
+
+        @include pc {
+            font-size: 2.9rem;
+        }
     }
     &__catch-down {
         font-size: 2.4rem;
         font-weight: 700;
+
+        @include pc {
+            font-size: 5.4rem;
+            padding: 1rem 0;
+        }
     }
     &__catch-yellow {
         color: #fffd7a;
@@ -349,9 +380,18 @@ li {
         font-size: 7.6rem;
         vertical-align: bottom;
         line-height: 0.98;
+
+        @include pc {
+            font-size: 17.1rem;
+            padding: 0 0 0 2rem;
+        }
     }
     .small {
         font-size: 4.6rem;
+
+        @include pc {
+            font-size: 7.6rem;
+        }
     }
     p {
         font-size: 1.4rem;
@@ -360,14 +400,17 @@ li {
         text-align: end;
         margin-right: 1rem;
 
-      @include pc {
-          font-size: 2.5rem;
-          line-height: calc(36 / 25);
-          letter-spacing: 0.76rem;
-      }
+        @include pc {
+            font-size: 1.8rem;
+            padding: 1rem 0 4.1rem;
+        }
     }
     .price-large {
         font-size: 2rem;
+
+        @include pc {
+          font-size: 2.6rem;
+        }
     }
     ul {
         margin: 0 auto;
@@ -375,14 +418,14 @@ li {
     li {
         font-size: 1.8rem;
         border: 0.1rem solid #fff;
-        margin: 0 0 1.5rem 0;
-        padding: 0.5rem 0.8rem;
+        margin: 0 0 1.9rem 0;
+        padding: 1rem 0.8rem;
         min-width: 13.3rem;
 
         @include pc {
             font-size: 2.8rem;
-            margin: 0 0 1.9rem 0;
-            padding: 1rem 0.8rem;
+            margin: 0 0 2.2rem 0;
+            padding: 1.5rem 0.8rem;
             min-width: 42.3rem;
         }
     }
@@ -509,6 +552,10 @@ li {
     }
     &_02 {
         padding: 1rem 2rem 2rem;
+
+        @include pc {
+            padding: 6rem 2rem 4rem;
+        }
     }
     &_03 {
       padding: 2rem 2rem 4rem;
@@ -547,7 +594,7 @@ li {
         margin: 0 auto;
 
         @include pc {
-            padding: 1.3rem 5.8rem 1.3rem 6.1rem;
+            padding: 1.3rem 7.8rem 1.3rem 10.1rem;
             letter-spacing: 0.3rem;
             border-radius: 6.5rem;
             font-size: 3.4rem;
@@ -578,6 +625,13 @@ li {
               align-items: center;
               background-size: contain;
               margin: 0.2rem 0 0 1.3rem;
+
+              @include pc {
+                  margin: 0.2rem 0 0 2.3rem;
+                  background-size: 95%;
+                  width: 4.2rem;
+                  height: 4.2rem;
+              }
             }
         }
     }
@@ -650,7 +704,7 @@ li {
     background-color: #fdf0f5;
 
     @include pc {
-        padding: 5rem 1.6rem 0;
+        padding: 5rem 1.6rem 2rem;
         max-width: unset;
     }
     &__container {
@@ -836,7 +890,7 @@ li {
         text-align: left;
 
         @include pc {
-            padding: 1.3rem 5.3rem 2rem;
+            padding: 1.3rem 5.3rem 2.8rem;
         }
     }
     &__info--catch_02 {
@@ -867,8 +921,8 @@ li {
         text-align: center;
 
         @include pc {
-            font-size: 2rem;
-            padding: 0.7rem 0 2.2rem 0;
+            font-size: 2.4rem;
+            padding: 5.7rem 0 2.2rem 0;
         }
   }
     &__item--detail_02 {
@@ -877,6 +931,13 @@ li {
         row-gap: 1.5rem;
         max-width: 31.1rem;
         justify-content: center;
+
+        @include pc {
+            flex-wrap: unset;
+            margin: 1rem 0 0;
+            row-gap: 1.5rem;
+            max-width: unset;
+        }
     }
     &__second--boxes {
         padding: 0 0.5rem;
@@ -891,6 +952,11 @@ li {
                 width: 100%;
             }
         }
+        &_02 {
+            @include pc {
+
+            }
+        }
     }
     &__second--name {
         font-size: 1.2rem;
@@ -898,14 +964,23 @@ li {
         font-weight: 700;
         padding: 0.5rem 0 0;
         text-align: center;
+
+        @include pc {
+            font-size: 1.4rem;
+        }
     }
 
 /* -------- point03 -------- */
 
     &__item--info_03 {
-      padding: 1.3rem 1.5rem 2rem;
-      font-size: 1.4rem;
-      text-align: left;
+        padding: 1.3rem 1.5rem 2rem;
+        font-size: 1.4rem;
+        text-align: left;
+
+        @include pc {
+            font-size: 2.1rem;
+            padding: 3.1rem 5.5rem 3rem;
+        }
     }
 }
 
@@ -916,6 +991,10 @@ li {
     margin: 0 auto;
     max-width: 102.4rem;
 
+    @include pc {
+        padding: 2rem 1.6rem 2rem;
+    }
+
     &__title {
         font-size: 1.8rem;
         color: #4d2b1b;
@@ -924,7 +1003,7 @@ li {
         letter-spacing: 0.15rem;
 
         @include pc {
-
+            font-size: 2.4rem;
         }
     }
     &__main {
@@ -937,8 +1016,8 @@ li {
         position: relative;
 
         @include pc {
-            font-size: 2rem;
-            padding: 0.7rem 0 2.2rem 0;
+            font-size: 4.2rem;
+            padding: 1.7rem 0 4.2rem 0;
         }
         &::before {
             content: "";
@@ -949,6 +1028,11 @@ li {
             position: absolute;
             left: 2rem;
             top: 6%;
+
+            @include pc {
+                left: 31rem;
+                top: 8%;
+            }
         }
         &::after {
             content: "";
@@ -959,6 +1043,18 @@ li {
             position: absolute;
             right: 2rem;
             top: 6%;
+
+            @include pc {
+                right: 31rem;
+                top: 8%;
+            }
+        }
+    }
+    &__box {
+        @include pc {
+            display: flex;
+            gap: 3rem;
+            justify-content: center;
         }
     }
     &__item {
@@ -978,6 +1074,10 @@ li {
             padding: 1.3rem 0;
             display: flex;
             justify-content: center;
+
+            @include pc {
+                font-size: 2.8rem;
+            }
         }
         &--info {
             border-radius: 0 0 1rem 1rem;
@@ -987,16 +1087,29 @@ li {
             border-left: 0.1rem solid #fa7da3;
             padding: 1.3rem 1.8rem 2rem;
         }
+        &--info_02 {
+            @include pc {
+                padding: 1.3rem 1.2rem 2rem;
+            }
+        }
     }
     &__info--catch {
         font-size: 1.4rem;
         line-height: calc(21 / 14);
         text-align: left;
         padding: 0 0 1.5rem 0;
+
+        @include pc {
+            font-size: 1.8rem;
+        }
     }
     &__pic {
         width: 31rem;
         max-height: 20rem;
+
+        @include pc {
+            margin: 0 auto;
+        }
     }
 }
 
@@ -1015,8 +1128,8 @@ li {
         position: relative;
 
         @include pc {
-            font-size: 2rem;
-            padding: 0.7rem 0 2.2rem 0;
+            font-size: 4.2rem;
+            padding: 4.3rem 0 2.2rem 0;
         }
         &::before {
             content: "";
@@ -1027,6 +1140,11 @@ li {
             position: absolute;
             left: 2rem;
             top: 6%;
+
+            @include pc {
+                left: 55rem;
+                top: 29%;
+            }
         }
         &::after {
             content: "";
@@ -1037,6 +1155,11 @@ li {
             position: absolute;
             right: 2rem;
             top: 6%;
+
+            @include pc {
+                right: 55rem;
+                top: 29%;
+            }
         }
     }
     &__item {
@@ -1045,6 +1168,10 @@ li {
         max-width: 35rem;
         margin: 0 0 1.5rem 0;
         height: 18.8rem;
+
+        @include pc {
+            margin: 0 0 2.5rem 0;
+        }
     }
     &__title {
         border-radius: 1rem 1rem 0 0;
@@ -1062,6 +1189,16 @@ li {
         border: 0.1rem solid #fa7da3;
         border-radius: 0 0 1rem 1rem;
         gap: 1rem;
+
+        @include pc {
+            padding: 1rem 2.2rem 1.5rem 1.8rem;
+            gap: 1.3rem;
+        }
+    }
+    &__down_02 {
+        @include pc {
+            padding: 1rem 1.2rem 1.5rem 0.5rem;
+        }
     }
     &__down--right {
         display: flex;
@@ -1071,6 +1208,10 @@ li {
     &__img {
         width: 38rem;
         margin: 1rem 0 0 0;
+
+        @include pc {
+            width: 31rem;
+        }
     }
     .swiper__container {
         position: relative;
@@ -1078,8 +1219,9 @@ li {
         max-width: 100%;
 
         @include pc {
-            max-width: 115.6rem;
+            max-width: 103rem;
             margin-inline: auto;
+            padding: 0 0 10rem 0;
         }
     }
     .swiper {
@@ -1088,8 +1230,8 @@ li {
         position: relative;
 
         @include pc {
-            padding: 2rem 0;
-            max-width: 98rem;
+            padding: 0;
+            max-width: 95rem;
         }
 
         &-slide {
@@ -1107,7 +1249,7 @@ li {
         letter-spacing: 0.03rem;
 
         @include pc {
-            padding: 1.1rem 0 1.6rem;
+            padding: 1rem 0 1rem;
         }
     }
     &__note {
@@ -1115,8 +1257,8 @@ li {
         line-height: calc(21 / 14);
 
         @include pc {
-            font-size: 1.6rem;
-            line-height: calc(28 / 16);
+            font-size: 1.4rem;
+            line-height: calc(24 / 14);
         }
     }
     .swiper-pagination {
